--- a/profile-styles.css
+++ b/profile-styles.css
@@ -3,8 +3,9 @@
     height: 100vh;
     width: 100vw;
     color: white;
-    --nav-width: 150px;
+    --nav-width: 10rem;
     text-align: center;
+    font-size: 15px;
 }
 
 * {
@@ -29,7 +30,7 @@ nav ul {
 }
 
 nav ul li {
-    margin-top: 25px;
+    margin-top: 1rem;
 }
 
 a {
@@ -43,7 +44,7 @@ a:hover {
 
 body {
     margin-left: var(--nav-width);
-    padding: 10px;
+    padding: 1 rem;
 }
 
 h1, h2 {
@@ -57,13 +58,13 @@ p, a, li {
 ul, ol {
     width: 200px;
     margin: auto;
-    margin-bottom: 10px;
+    margin-bottom: 1rem;
     text-align: left;
 }
 
 img {
-    width: 300px;
-    height: 300px;
+    width: 20rem;
+    height: 20rem;
     border-radius: 50%;
     border: 3px solid black;
 }
