--- a/profile-styles.css
+++ b/profile-styles.css
@@ -5,7 +5,7 @@
     color: white;
     --nav-width: 12rem;
     text-align: center;
-    font-size: clamp(10px, 1.2vw, 15px);
+    font-size: clamp(12px, 1.2vw, 16px);
 }
 
 * {
@@ -45,6 +45,12 @@ a:hover {
 body {
     margin-left: var(--nav-width);
     padding: 1 rem;
+}
+
+section {
+    margin: auto;
+    width: 90%;
+    max-width: 80rem;
 }
 
 h1, h2 {
