--- a/profile-styles.css
+++ b/profile-styles.css
@@ -10,34 +10,53 @@
 
 * {
     box-sizing: border-box;
-    border: 1px solid black;
+    border: 0px solid black;
 }
 
 nav {
     display: flex;
     flex-direction: column;
     gap: 30px;
-    padding: 10px;
     position: fixed;
     top: 0;
     left: 0;
     height: 100vh;
     width: var(--nav-width);
     background-color: #225;
+    padding-top: 10px;
 }
 
-a {
+nav > a {
+    display: flex;
     text-decoration: none;
     color: yellow;
+    font-weight: bold;
+    margin: 0 auto;
+    width: 100%;
+    height: 2rem;
 }
 
-a:hover {
-    color: pink;
+.nav-button {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
 }
+
+.nav-button:hover {
+    color: pink;
+    background-color: #101029;
+    font-size: 1.1rem;
+}
+
+.nav-button:active {
+    font-size: 1.05rem;
+}
+
 
 body {
     margin-left: var(--nav-width);
-    padding: 1 rem;
+    padding: 1rem;
 }
 
 section {
