--- a/profile-styles.css
+++ b/profile-styles.css
@@ -1,5 +1,4 @@
 :root {
-    background: linear-gradient(60deg,#222, #444);
     height: 100vh;
     width: 100vw;
     color: white;
@@ -22,14 +21,15 @@ nav {
     left: 0;
     height: 100vh;
     width: var(--nav-width);
-    background-color: #225;
+    background-color: black;
     padding-top: 10px;
+    box-shadow: 0 0 1rem 0.1rem white;
 }
 
 nav > a {
     display: flex;
     text-decoration: none;
-    color: yellow;
+    color: rgb(255, 81, 0);
     font-weight: bold;
     margin: 0 auto;
     width: 100%;
@@ -44,8 +44,8 @@ nav > a {
 }
 
 .nav-button:hover {
-    color: pink;
-    background-color: #101029;
+    color: yellowgreen;
+    background-color: #222;
     font-size: 1.1rem;
 }
 
@@ -55,6 +55,7 @@ nav > a {
 
 
 body {
+    background: linear-gradient(90deg, #222, #333, #222);
     margin-left: var(--nav-width);
     padding: 1rem;
 }
@@ -95,4 +96,8 @@ img {
 
 #food-img {
     object-fit: cover;
+}
+
+.long-paragraph {
+    columns
 }
