--- a/profile-styles.css
+++ b/profile-styles.css
@@ -2,7 +2,7 @@
     height: 100vh;
     width: 100vw;
     color: white;
-    --nav-width: clamp(120px, 18vw, 250px);
+    --nav-width: clamp(120px, 20vw, 250px);
     text-align: center;
     font-size: clamp(12px, 1.2vw, 16px);
 }
@@ -29,11 +29,13 @@ nav {
 nav > a {
     display: flex;
     text-decoration: none;
+    font-family: "Gloria Hallelujah", cursive;
+    font-size: 1.2rem;
     color: rgb(255, 81, 0);
     font-weight: bold;
     margin: 0 auto;
     width: 100%;
-    height: 2rem;
+    height: 4rem;
 }
 
 .nav-button {
@@ -46,11 +48,11 @@ nav > a {
 .nav-button:hover {
     color: yellowgreen;
     background-color: #222;
-    font-size: 1.1rem;
+    font-size: 1.4rem;
 }
 
 .nav-button:active {
-    font-size: 1.05rem;
+    font-size: 1.35rem;
 }
 
 
@@ -67,11 +69,17 @@ section {
 }
 
 h1, h2 {
-    font-family: tahoma;
+    font-family: "Gloria Hallelujah", cursive;
+}
+
+h1 {
+    margin-top: 0;
+    font-size: 4rem;
+    letter-spacing: 0.2rem;
 }
 
 p, a, li {
-    font-family: sans;
+    font-family: "Open Sans", sans-serif;
 }
 
 ul, ol {
