--- a/profile-styles.css
+++ b/profile-styles.css
@@ -1,6 +1,6 @@
 :root {
     height: 100vh;
-    width: 100vw;
+    width: 99vw;
     color: white;
     --nav-width: clamp(120px, 20vw, 250px);
     text-align: center;
@@ -60,6 +60,14 @@ body {
     background: linear-gradient(90deg, #222, #333, #222);
     margin-left: var(--nav-width);
     padding: 1rem;
+    
+}
+
+#grid-container {
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    width: clamp(100px, 70vw, 1500px)
 }
 
 section {
@@ -77,6 +85,7 @@ h1 {
     margin-top: 0;
     font-size: 4rem;
     letter-spacing: 0.2rem;
+    grid-column: 1 / -1;
 }
 
 p, a, li {
@@ -107,8 +116,20 @@ img {
     object-fit: cover;
 }
 
+#third-section {
+    grid-column: 1 / -1;
+}
+
 .long-paragraph {
     column-width: 14rem;
     column-gap: 2rem;
     text-align: justify;
+}
+
+footer {
+    grid-column: 1 / -1;
+}
+
+footer a {
+    color: yellow;
 }
